--- a/OABValidate/OABValidate.csproj
+++ b/OABValidate/OABValidate.csproj
@@ -71,6 +71,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="Export-LingeringLinkObjects.ps1" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
